# pre2_port

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
artifacts/after_sprites_04/: state.json
artifacts/blit_witness/: index.json
artifacts/frame_state_witness/: camera_scroll_091827.txt
artifacts/keytest_enter/: state.json
artifacts/pre2_after_1_bios/: state.json
artifacts/pre2_after_1_hold/: state.json
artifacts/pre2_after_enter2_segmentfix/: state.json
docs/: README.md
dos_re/: AI_PORTING_CHARTER.md  bootstrap_lzexe.py  cpu.py  dos.py  dosbox_savestate.py  frame_verify.py  hooks.py  input_demo.py  interrupts.py  keyboard.py  memory.py  mz.py  pic.py  repro_artifacts.py  runtime.py  sblaster.py  snapshot.py  testing.py  verification.py
nuked_opl3/: LICENSE  README.md  __init__.py  _ffi_build.py  pyproject.toml  setup.py
pre2/: __init__.py  analysis.py  bootstrap_hooks.py  cli.py  islands.py  launch.py  replacements.py  runtime.py
scripts/: clean.py  gen_island_manifest.py  lint.py  play.py  render_frame.py  render_music.py  run_tests.py  sdl_view.py
tests/: test_animation.py  test_audio_architecture.py  test_audio_assets.py  test_audio_mixer.py  test_audio_system.py  test_audio_tracker.py  test_blit_renderer.py  test_camera_pan.py  test_camera_shake.py  test_carte.py  test_combat_interaction.py  test_core.py  test_dos_re_smoke.py  test_enhanced_compositor.py  test_enhanced_present.py  test_enhanced_transitions.py  test_fireflies.py  test_firefly_sim.py  test_foreground_tiles.py  test_frame_bridge.py  test_frame_renderer.py  test_gameover_background.py  test_hud_bonus.py  test_hud_chrome.py  test_image_scene.py  test_input_demo.py  test_island_registry.py  test_menu_scene.py  test_momentum.py  test_native_background.py  test_nuked_opl3_vendor.py  test_object_inject.py  test_object_particles.py  test_object_render.py  test_object_tick.py  test_object_update.py  test_oldies_screen.py  test_oracle_links.py  test_palette_state.py  test_particles.py  (+25 more)
(+272 files in other folders)
