[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pre2-source-port"
version = "0.1.0"
description = "Prehistorik 2 source-port workbench on top of a reusable DOS real-mode VM"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pre2-play = "pre2.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[project.optional-dependencies]
viewer = [
    "numpy>=1.23",
    "pygame>=2.5",
]
test = [
    "pytest>=8",
]
adlib = [
    "cffi>=1.15",
]

[tool.setuptools.packages.find]
include = ["dos_re*", "pre2*", "nuked_opl3*"]

[tool.setuptools.package-data]
"nuked_opl3" = ["vendor/*.c", "vendor/*.h", "README.md", "LICENSE"]
